# T3

./: CMakeLists.txt  README.md  base64.cpp  base64.hpp  main.cpp  test.cpp  tests.cpp
src/: base64.cpp  base64.h  base64.hpp  operations.cpp  operations.h
